# Carbon-Footprint-Awareness-Platform

./: .gitignore  Makefile  README.md  cloudbuild-frontend.yaml  deploy_gcp.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  ecosentinel.db  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/middleware/: firebase_auth.py  logging_middleware.py  rate_limiter.py
backend/app/api/v1/: ai.py  analytics.py  emissions.py  health.py  reports.py  router.py  users.py
backend/app/application/schemas/: emission_schema.py
backend/app/domain/entities/: emission.py  user.py
backend/app/domain/services/: emission_factors.py
backend/app/infrastructure/database/: base.py
backend/app/infrastructure/database/models/: emission_model.py  user_model.py
backend/tests/: conftest.py
backend/tests/unit/: test_emission_entity.py  test_emissions_api.py
frontend/: Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/components/layout/: Sidebar.tsx  TopNav.tsx
frontend/src/components/providers/: QueryProvider.tsx
frontend/src/components/ui/: ErrorBoundary.tsx  toaster.tsx
frontend/src/hooks/: useAuth.ts  useEmissions.ts  useEnvironment.ts  useToast.ts
frontend/src/infrastructure/api/: client.ts  emissions.api.ts
frontend/src/infrastructure/firebase/: auth.ts  config.ts
frontend/src/lib/: mockData.ts  utils.test.ts  utils.ts
frontend/src/types/: emission.types.ts
(+11 files in other folders)
